# language-control-diffusion

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  dataset.pt  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docker/: README.md
language_control_diffusion/: __init__.py  __main__.py
src/lcd/: __init__.py  __main__.py
src/lcd/apps/: eval_all.py  rollout.py  train_ablation.py  train_gcbc.py  train_hulc.py  train_lcd.py  train_transformer.py
src/lcd/config/: calvin.py  clevr.py
src/lcd/datasets/: __init__.py  sequence.py
src/lcd/models/: __init__.py  ablations.py  diffusion.py  helpers.py  mlp.py  temporal.py  transformer.py
src/lcd/scripts/: diffuser.py  run_gcbc_parallel.py  run_transformer_parallel.py
src/lcd/scripts/generation/: clevr_language.py  clip_embeddings.py  dataset.py  embeddings.py  error_lang_clevr.py  task_orderings.py  test_lang_clevr.py  train_lang_clevr.py
src/lcd/utils/: __init__.py  arrays.py  config.py  eval.py  git_utils.py  serialization.py  setup.py  training.py
src/lcd/utils/clevr/: __init__.py  eval.py
tests/test_example/: test_hello.py
